--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#A3A3A3" />
-    <title>Github Explorer</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
-      rel="stylesheet"
+    <meta name="theme-color" content="#fff" />
+    <meta
+      name="description"
+      content="Projeto teste para Front-end para Goomer | Cardápio Digital e Totem de Autoatendimento."
     />
+    <meta
+      name="keywords"
+      content="goomer, cardapio digital, challenge, developer, frontend"
+    />
+    <meta name="author" content="Marcos Dissotti S3 Goomer" />
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="content-language" content="pt-BR" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/fonts.css" />
+    <title>Goomer | Lista Rango</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
